# fse_final_project

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  model_inference.py
src/templates/: index.html
tests/: inference_test.py  main_test.py
